# heroai

./: .directory  .env.example  .gitignore  AGENTS.md  deploy.md  docker-compose.yml  memory.md  mvp-idea.md  opencode.json  project-description.md  specs-1.md  specs-final-draft.md  specs-mvp.md  texto-01.txt
.opencode/plans/: lxc-config-proposal.md
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: main.py
apps/api/app/api/routes/: health.py  profiles.py  stories.py
apps/api/app/core/: auth.py  config.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: child_profile.py  story.py  story_feedback.py  story_panel.py  user.py
apps/api/app/schemas/: profile.py  story.py
apps/api/app/services/: feedback_service.py  profile_service.py  story_service.py
apps/api/app/workers/: celery_app.py  image_worker.py  script_worker.py
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json  proxy.ts
apps/web/app/: layout.tsx
apps/web/app/dashboard/: page.module.css  page.tsx
apps/web/app/profiles/new/: page.module.css  page.tsx
apps/web/app/sign-in/: page.module.css  page.tsx
apps/web/components/: AvatarBuilder.module.css  AvatarBuilder.tsx  ProfileCard.module.css  ProfileCard.tsx  ReactionBar.module.css  ReactionBar.tsx  StoryCard.module.css  StoryCard.tsx
apps/web/lib/: api.ts
apps/web/styles/: globals.css
memory/: 02-first-build-session.md
openspec/changes/archive/2026-04-26-fix-alembic-defaults/: design.md  proposal.md  tasks.md
(+41 files in other folders)
